--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lodash": "^4.17.15",
     "popper.js": "^1.16.1",
     "react": "^16.12.0",
+    "react-confirm-alert": "^2.5.1",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
