--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "antd": "^4.2.0",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "firebase": "^7.14.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "jwt-decode": "^2.2.0",
@@ -16,9 +18,11 @@
     "popper.js": "^1.16.1",
     "react": "^16.12.0",
     "react-confirm-alert": "^2.5.1",
+    "react-datepicker": "^2.15.0",
     "react-dom": "^16.12.0",
-    "react-horizontal-scrolling-menu": "^0.7.7",
+    "react-html-parser": "^2.0.2",
     "react-multi-select-component": "^2.0.5",
+    "react-quill": "^1.3.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "react-spinners": "^0.8.1",
