--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jquery": "^3.4.1",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.15",
+    "mdbreact": "^4.26.1",
     "multiselect-react-dropdown": "^1.4.8",
     "popper.js": "^1.16.1",
     "react": "^16.12.0",
